# pyzdd

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  clean.sh  pyproject.toml  setup.py
.github/workflows/: ci.yml  cpp.yml  deploy.yml  testing.yml
pyzdd/: __init__.py  graph.py  structure.py
src/: CMakeLists.txt  short_range_order.hpp  wrapper.cpp
src/example/: example.cpp
src/pyzdd/: __init__.py  graph.py  structure.py
src/test/: example.cpp  test_choice.cpp  test_combination.cpp  test_induced_graph.cpp  test_permutation.cpp  test_simpath.cpp  test_spanning_forest.cpp  test_sro.cpp  test_stpath.cpp  test_structure_enumeration.cpp  test_superperiodic.cpp
tests/: test_graph.py  test_spec.py  test_sro.py
xtal_tdzdd/: CMakeLists.txt  graph.hpp  iterator.cpp  permutation.hpp  short_range_order.hpp  structure_enumeration.hpp  wrapper.cpp
xtal_tdzdd/example/: example.cpp
xtal_tdzdd/spec/: choice.hpp  combination.hpp  induced_subgraph.hpp  isomorphism.hpp  simpath.hpp  spanning_forest.hpp  stpath.hpp  superperiodic.hpp  universe.hpp
xtal_tdzdd/test/: test_choice.cpp  test_combination.cpp  test_induced_graph.cpp  test_permutation.cpp  test_simpath.cpp  test_spanning_forest.cpp  test_sro.cpp  test_stpath.cpp  test_structure_enumeration.cpp  test_superperiodic.cpp  test_universe.cpp
