[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

# Enable version inference
[tool.setuptools_scm]

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux2014"

[tool.cibuildwheel.linux]
# Note that manylinux_2_24 builds occur inside a Debian9 docker, where manylinux2010 and manylinux2014 builds occur inside a CentOS one. So for manylinux_2_24 the CIBW_BEFORE_ALL_LINUX command must use apt-get -y instead.
before-build = "yum install -y make cmake gcc gcc-c++"

[tool.cibuildwheel.macos]
# archs = ["x86_64", "arm64"]

[tool.ruff]
line-length = 99
[tool.ruff.lint]
extend-select = [
    "F",           # pyflakes
    "E",           # pycodestyle-errors
    "I",           # isort
    # "D",           # pydocstyle
    "UP",          # pyupgrade
]
extend-ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D203",  # Conflict with D211
    "D205",
    "D213",  # Conflict with D212
    "E501",
]

[tool.mypy]
exclude = [
  'docs',
]

warn_no_return = false
[tool.pytest.ini_options]
testpaths = ["tests"]
